# backend/docs/swagger.json
@@ -8,6 +8,25 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/getrecipes/{userID}": {
+            "get": {
+                "description": "Get recipes based on userID",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get saved recipe data from mongodb database",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userID",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/recipe/{id}": {
             "get": {
                 "description": "Get recipe information based on given recipe id",
@@ -58,6 +77,29 @@
                         }
                     }
                 }
+            }
+        },
+        "/save/{userID}/{recipeID}": {
+            "get": {
+                "description": "Saves recipe based on userID and recipeID",
+                "summary": "Save recipe information to mongodb database",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userID",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "recipeID",
+                        "name": "recipeID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
             }
         }
     },
@@ -150,7 +192,7 @@
                     "type": "string"
                 },
                 "ratingCount": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "score": {
                     "type": "number"
